@@ -1,4 +1,5 @@
 -- v?? --
+* EditableCString - helper that creates no-the-fly C-style string, that can be modified out of const-char-string and std::string.
 * UniqueTypeString<> - string class template for creating string representations that differ only in compile-type.
 * build_process v2.0.1 introduced.
 * NoInstance base class, blocking creation of instances of derived objects.
